{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "14c541e1-3755-4ffa-acac-af706b1f200a",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d42381a3-a5dd-4b91-a9d6-33440b27d993",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "828e4d7c-b46d-4678-98f4-4aad131ac299",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dance",
                    "type": "Button",
                    "id": "fa556c93-a6af-4e50-a0f6-bf4b0b55ee5e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "8c4a2026-41a6-4c17-a67e-98ad9b1e9a14",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "58800a67-621a-4fac-b3a9-35172009fa2b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bf0ae0d-d453-4c85-afe5-326263536aee",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85632d6e-3c27-433a-999c-4ac0222feecc",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dance",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "701d136a-12ac-4613-bf17-aef08c8b1ea6",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}